@@ -12,14 +12,14 @@ def generate_div2_list(n, n_min) -> list:
 
 def get_hidden_sizes(_L_in, l1, n=10) -> list:
     """
-    Generates a list of hidden sizes for a neural network with a given input size and l1 regularization.
-    The list is generated by dividing the input size by 2 until the minimum size is reached.
+    Generates a list of hidden sizes for a neural network with a given input size.
+    Starting with size l1, the list is generated by dividing the input size by 2 until the minimum size is reached.
 
     Args:
         _L_in (int):
             input size.
         l1 (int):
-            l1 regularization.
+            number of neurons in the first hidden layer.
         n (int):
             number of hidden sizes to generate.
 
@@ -30,10 +30,10 @@ def get_hidden_sizes(_L_in, l1, n=10) -> list:
     Examples:
         >>> from spotpython.hyperparameters.architecture import get_hidden_sizes
             _L_in = 10
-            l1 = 10
-            n = 10
+            l1 = 20
+            n = 4
             get_hidden_sizes(_L_in, l1, n)
-            [10, 5, 2, 1, 1, 1, 1, 1, 1, 1]
+            [20, 10, 10, 5]
     """
     if l1 < 4:
         raise ValueError("l1 must be at least 4")
