@@ -1,3 +1,9 @@
+spotpython 0.18.4:
+
+
+- architecture.py:
+    documentation updated
+
 spotpython 0.18.3:
 
 - init.py:
